# Aryan

./: .gitignore  README.md  a.py  example.py  pyproject.toml  test.py  test.txt
main/: __init__.py  application.py  bot.py  protocol.py
main/aryan/: application.py  bot.py
main/aryan/contact/: friend.py  normal_member.py  user.py  user_or_bot.py
main/aryan/event/: __init__.py  channel.py  listener.py
main/aryan/event/events/: bot.py  friend.py
main/aryan/internal/: __init__.py
main/aryan/message/code/: codable.py
main/aryan/message/data/: chain.py  face.py  image.py  message.py  quote.py  single_message.py  source.py
main/contact/: anonymous_member.py  contact.py  contact_list.py  contact_or_bot.py  group.py  member.py  stranger.py
main/event/: __init__.py  channel.py  filter.py  listener.py
main/event/events/: bot.py  friend.py  group.py  message.py  nudge_event.py  types.py
main/message/: message_receipt.py
main/message/code/: mirai_code.py
main/message/data/: at.py  chain.py  contrain_single.py  message.py  plain.py
src/aryan/: __init__.py  application.py  protocol.py  utils.py
src/aryan/contact/: group.py
src/aryan/event/: channel.py  listener.py
src/aryan/event/events/: app.py  group.py  message.py  types.py
src/aryan/message/data/: chain.py  face.py  image.py
