[tool.poetry]
name = "aryan"
version = "0.1.0"
description = ""
authors = ["qianmo527 <2816661524@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
aiohttp = "^3.8.1"
loguru = "^0.5.3"
click = "^8.0.3"
graia-broadcast = "^0.15.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
