[tool.poetry]
name = "aryan"
version = "0.0.3.post1"
description = "A small package"
authors = ["qianmo527 <2816661524@qq.com>"]
readme = "README.md"
packages = [{ include = "aryan", from = "main" }]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
aiohttp = "^3.8.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
